--- a/doc/apresentacao.tex
+++ b/doc/apresentacao.tex
@@ -181,7 +181,8 @@ Virtualization type: container\\}
 
 \begin{columns}
 \begin{column}{0.7\textwidth}
-\scriptsize{Architecture:          x86\_64 \\
+\scriptsize{
+Architecture:          x86\_64 \\
 CPU op-mode(s):        32-bit, 64-bit\\
 Byte Order:            Little Endian\\
 CPU(s):                8\\
@@ -211,5 +212,144 @@ NUMA node0 CPU(s):     0-7\\}
 \end{column}
 \end{columns}
 \end{frame}
+
+\begin{frame}
+\frametitle{Gráficos de Deadline}
+
+\blindtext
+
+\begin{figure}[!htb]
+\minipage{0.32\textwidth}
+  \includegraphics[width=\linewidth]{imgs/deadline5-1.png}
+  \caption{M1, 5 threads}\label{fig:awesome_image1}
+\endminipage\hfill
+\minipage{0.32\textwidth}
+  \includegraphics[width=\linewidth]{imgs/deadline50-1.png}
+  \caption{M1, 50 threads}\label{fig:awesome_image2}
+\endminipage\hfill
+\minipage{0.32\textwidth}%
+  \includegraphics[width=\linewidth]{imgs/deadline500-1.png}
+  \caption{M1, 500 threads}\label{fig:awesome_image3}
+\endminipage
+\end{figure}
+
+\blindtext
+
+
+
+\blindtext
+
+\begin{figure}[!htb]
+\minipage{0.32\textwidth}
+  \includegraphics[width=\linewidth]{imgs/deadline5-2.png}
+  \caption{M2, 5 threads}\label{fig:awesome_image1}
+\endminipage\hfill
+\minipage{0.32\textwidth}
+  \includegraphics[width=\linewidth]{imgs/deadline50-2.png}
+  \caption{M2, 50 threads}\label{fig:awesome_image2}
+\endminipage\hfill
+\minipage{0.32\textwidth}%
+  \includegraphics[width=\linewidth]{imgs/deadline500-2.png}
+  \caption{M2, 500 threads}\label{fig:awesome_image3}
+\endminipage
+\end{figure}
+
+\blindtext
+
+\end{frame}
+
+\begin{frame}
+\frametitle{Gráficos de Mudanças de Contexto: Análise}
+
+Os resultados \textbf{não} foram os esperados.
+
+\item Era de se esperar que o SRTN cumprisse mais deadlines que o FCFS. Além disso não acontecer, ambos escalonadores apresentaram \textit{exatamente} o mesmo desempenho em \textbf{todas} as execuções do código. 
+
+\item Após analisar os resultados e revisitar o código, identificamos o motivo do erro. Ao invés de implementar o SRTN (que deveria suspender um processo quando um mais curto chegasse), implementamos o Shortest Remaining Time First (ordenamos o vetor de processos com base no t0 + dt, mas não houve qualquer comunicação entre as threads para que o processo mais curto disponível interrompesse a execução do processo atual). Infelizmente, quando nos demos conta disso, não havia mais tempo para corrigir a implementação.
+
+\end{frame}
+
+
+\begin{frame}
+\frametitle{Gráficos de Mudanças de Contexto: Análise}
+
+
+\item \textbf{(Falta de) diferença entre as máquinas:} era esperado que o desempenho em ambas fosse o mesmo. Não havia threads correndo em paralelo, já que nossa implementação simulava apenas 1 CPU.
+
+\item \textbf{(Falta de) diferença entre as execuções:} \textit{não} era esperado que todas as execuções levassem a exatamente os mesmos resultados. Deveriam ter havido ocasiões em que mais de uma thread poderia ter acesso ao mutex, o que levaria a resultados diferentes. Entretanto, os processos sempre foram executados na ordem [0, 1, 2, ..., n]. Como todas as 30 execuções levaram ao mesmo resultado, não fazia sentido incluir a média e intervalo de confiança nos gráficos.
+
+\item Acreditamos que isso se deve ao fato de cada pthread\_join ter sido dentro do loop de criação de cada thread. Ou seja: cada thread foi concluída logo após sua criação. Não haviam threads existentes simultaneamente, o que impediu que duas ou mais threads pudessem entrar em condição de corrida, que seria o motivo de ter resultados diferentes em diferentes execuções.
+
+
+\end{frame}
+
+\begin{frame}
+\frametitle{Gráficos de Mudanças de Contexto: Análise}
+\item A baixíssima taxa de cumprimento de deadlines também não era esperada. Isso foi um problema com os arquivos de entrada que utilizamos, e não com o algoritmo. Todos os deadlines que geramos automaticamente eram muito curtos e muito próximos, e não poderiam ser cumpridos em tempo por uma máquina com uma única CPU.
+
+\item Se tivéssemos gerado prazos maiores para os processos, ou simulados mais CPUs, mais deadlines teriam sido cumpridos. 
+\end{frame}
+
+
+\begin{frame}
+\frametitle{Gráficos de Mudanças de Contexto}
+
+\blindtext
+
+\begin{figure}[!htb]
+\minipage{0.32\textwidth}
+  \includegraphics[width=\linewidth]{imgs/contex5-1.png}
+  \caption{M1, 5 threads}\label{fig:awesome_image1}
+\endminipage\hfill
+\minipage{0.32\textwidth}
+  \includegraphics[width=\linewidth]{imgs/contex50-1.png}
+  \caption{M1, 50 threads}\label{fig:awesome_image2}
+\endminipage\hfill
+\minipage{0.32\textwidth}%
+  \includegraphics[width=\linewidth]{imgs/contex500-1.png}
+  \caption{M1, 500 threads}\label{fig:awesome_image3}
+\endminipage
+\end{figure}
+
+\blindtext
+
+
+
+\blindtext
+
+\begin{figure}[!htb]
+\minipage{0.32\textwidth}
+  \includegraphics[width=\linewidth]{imgs/contex5-2.png}
+  \caption{M2, 5 threads}\label{fig:awesome_image1}
+\endminipage\hfill
+\minipage{0.32\textwidth}
+  \includegraphics[width=\linewidth]{imgs/contex50-2.png}
+  \caption{M2, 50 threads}\label{fig:awesome_image2}
+\endminipage\hfill
+\minipage{0.32\textwidth}%
+  \includegraphics[width=\linewidth]{imgs/contex500-2.png}
+  \caption{M2, 500 threads}\label{fig:awesome_image3}
+\endminipage
+\end{figure}
+
+\blindtext
+
+\end{frame}
+
+
+
+
+\begin{frame}
+\frametitle{Gráficos de Mudanças de Contexto: Análise}
+
+Mais uma vez, os resultados \textbf{não} foram os esperados.
+
+\item Se houvéssemos implementado o SRTN da forma correta, ele apresentaria mais mudanças de contexto que o FCFS. Entretanto, considerando que (infeliz e erroneamente) implementamos o Shortest Remaining Time Next, faz sentido que o número de mudanças de contexto seja o mesmo do escalonador FCFS.
+
+\item Como explicado no gráfico anterior, suspeitamos que utilizamos o pthread\_join de forma errada, o que levou à ausência de qualquer condição de corrida entre threads. Tendo isso em vista, faz sentido que todos os resultados mais uma vez tenham sido idênticos.
+
+
+\end{frame}
+
 \end{document}
 
